Drop JVMCI compiler in favor of ZGC